Primera adaptación a Spring Boot 4 a falta de pruebas más intensas